<?xml version="1.0"?>
<package format="2">
  <name>transform_manager</name>
  <version>1.0.0</version>
  <description>The transform_manager package</description>
  <!-- version 0.0.0 original -->
  <author email="roland@ccom.unh.edu">Roland Arsenault</author>
  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>
  <!-- version 1.0.0 modified -->
  <maintainer email="marcos.barrera@seafloorsystems.com">Marcos Barrera</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>rqt_gui</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
